--- a/site/style.css
+++ b/site/style.css
@@ -72,10 +72,12 @@ button[disabled] {
 }
 
 
-
-
 /* ## Experiment-specific styles */
 /* This stuff will vary by experiment. */
+#stage.slide h5 {
+  font-size: 16px;
+}
+
 #logo-text {
   margin-bottom: 1em;
 }
@@ -131,5 +133,8 @@ td {
 
 #debriefing textarea {
   height: 5em;
-  margin-bottom: 1em;
+}
+
+#debriefing .question {
+  margin-bottom: 1.1em;
 }
